// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StarRating > should match snapshot when fully rendered 1`] = `
<DocumentFragment>
  <div
    class="flex gap-1 sm:gap-2"
  >
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`StarRating > should match snapshot when rating is 3 1`] = `
<DocumentFragment>
  <div
    class="flex gap-1 sm:gap-2"
  >
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#ffffff"
        data-testid="star-yellow-icon"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`StarRating > should match snapshot when rating is 5 1`] = `
<DocumentFragment>
  <div
    class="flex gap-1 sm:gap-2"
  >
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
    <button
      class="text-2xl sm:text-3xl !p-0"
      data-testid="mock-button"
      data-variant="icon"
    >
      <svg
        data-fill="#F9CC49"
        data-testid="star-yellow-icon"
      />
    </button>
  </div>
</DocumentFragment>
`;
